# scriptHub-pe-aponti26dev

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  menu.py  pente_fino.py  pyproject.toml  requirements.txt
analise/: __init__.py  __main__.py  pente_fino.py
auditoria_de_relatorios/: README.md  __main__.py  executar.py
automacao/: __main__.py  escopo1.py  escopo2.py  escopo3.py  executar.py
automacao_de_forum/: .env.example  README.md  __main__.py  config.py  executar.py
automacao_de_frequencias/: README.md  __main__.py  config.py  executar.py  exportar_frequencias.py  settings.example.json
automacao_de_notas/: __init__.py  __main__.py  config.py  executar.py  integracao_drive.py  scraper.py  settings.example.json
automacao_de_notas/dados/: sem_notas.txt
automacao_de_notas/dados/cache/: turma_01.json  turma_02.json  turma_03.json  turma_04.json  turma_05.json  turma_06.json  turma_07.json  turma_08.json  turma_10.json  turma_15.json  turma_16.json  turma_17.json  turma_18.json  turma_19.json  turma_20.json  turmas_urls.json
automacao_de_relatorios/: .env.example  README.md  __init__.py  __main__.py  backup.py  config.py  download_de_relatorios.py  escopo1.py  escopo2.py  escopo3.py  escopo4.py  executar.py  integracao_google_sheets.py  main.py  middleware_analise_de_relatorios.py  scope1.py  scope2.py  scope3.py  scope4.py  settings.example.json
automacao_de_softskills/: .env.example  README.md  __init__.py  __main__.py  config.py  download_softskills.py  download_softskills_fap2026.py  executar.py  integracao_drive.py  processamento.py  settings.example.json
compilacao_de_relatorios/: __main__.py  compilar_pdfs.py  config.py  download_de_relatorios.py  executar.py  settings.example.json
docs/superpowers/plans/: 2026-06-15-automacao-de-frequencias.md
docs/superpowers/specs/: 2026-06-15-automacao-de-frequencias-design.md
negatividade_de_relatorios/: __main__.py  executar.py
src/scripthub/: _i18n.py  cli.py
src/scripthub/scripts/auditar_frequencias/: README.md  __init__.py  __main__.py  exportar_frequencias.py  integracao_google_sheets.py  main.py
src/scripthub/scripts/auditar_relatorios/: README.md  __init__.py  backup.py  config.py  download_de_relatorios.py  integracao_google_sheets.py  main.py  middleware_analise_de_relatorios.py
src/scripthub/scripts/auditar_softskills/: README.md  __init__.py  config.py  download_softskills.py  integracao_drive.py  main.py  settings.example.json
src/scripthub/scripts/compilacao_de_relatorios/: .env.example  README.md  __init__.py  __main__.py  compilar_pdfs.py  config.py  download_de_relatorios.py  main.py  settings.example.json
src/scripthub/scripts/menu/: main.py
src/scripthub/scripts/torpedo_de_forum/: README.md  __init__.py  main.py  settings.example.json
src/scripthub/services/: escopo.py  log.py
src/scripthub/services/config/: campo.py  (+6 more)
tests/: conftest.py  test_menu.py
tests/auditar_frequencias/: test_config.py  test_exportar_frequencias.py  test_integracao_google_sheets.py
tests/auditar_relatorios/: test_backup.py  test_config.py  test_download_de_relatorios.py  test_integracao_google_sheets.py  test_middleware.py
tests/auditar_softskills/: test_config.py  test_download_softskills.py  test_integracao_drive.py
tests/automacao_de_forum/: __init__.py  test_config.py
tests/automacao_de_frequencias/: test_config.py  test_exportar_frequencias.py
tests/automacao_de_notas/: test_config.py
tests/automacao_de_softskills/: test_config.py  test_download_softskills.py  test_download_softskills_fap2026.py  test_integracao_drive.py
tests/compilacao_de_relatorios/: test_compilar_pdfs.py  test_config.py  test_download_de_relatorios.py
tests/menu/: test_menu.py
tests/services/: test_google_drive.py  test_google_sheets.py  test_moodle_sessao.py  test_persistencia.py  test_validacao.py
tests/services/config/: test_esquemas.py
tests/torpedo_de_forum/: test_config.py  test_main.py
(+8 files in other folders)
